<resources>
    <string name="app_name">Reading Journal</string>
    <string name="titulo">Reading Journal</string>
    <string name="msg_bemvindo">Seja bem-vindo jovem leitor</string>
    <string name="msg_iniciarjornada">Iniciar Jornada</string>
    <string name="msg_retomarjornada">Retomar Jornada</string>

    <string name="campo_nome">Nome</string>
    <string name="campo_email">Email</string>
    <string name="campo_senha">Senha</string>

    <string name="editar">Editar</string>
    <string name="adicionar">Adicionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="excluir">Excluir</string>

    <string name="dashboard">Dashboard</string>
    <string name="leituras">Leituras</string>
    <string name="listaDeDesejos">Lista de Desejos</string>
    <string name="genero">Genero</string>
    <string name="nota">Nota</string>
    <string name="livro">Livro</string>
    <string name="comentario">Comentário</string>
    <string name="naoencontrou">Não encontrou seu livro? Adicionar</string>
    <string name="tituloLivro">Titulo</string>
    <string name="paginas">Quantidade de páginas</string>

    <string name="livrosLidos">Quantidade de livros lidos:</string>
    <string name="paginasLidas">Quantidade de páginas lidas:</string>
    <string name="generoLido">Gênero mais lido:</string>
</resources>
