<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UsuarioCadastro">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/roxo_escuro"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/msgbemvindo"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/msg_bemvindo"
        android:textAlignment="center"
        android:textColor="@color/roxo_escuro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <LinearLayout
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msgbemvindo">

        <TextView
            android:id="@+id/campoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campo_nome"
            android:textColor="@color/roxo_escuro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Digite seu nome"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/campoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campo_email"
            android:textColor="@color/roxo_escuro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Digite seu email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/campoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campo_senha"
            android:textColor="@color/roxo_escuro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Digite a senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/iniciarJornadaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/roxo_escuro"
            android:text="@string/msg_iniciarjornada"
            android:textColor="@color/roxo_claro" />

        <Button
            android:id="@+id/retomarJornadaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/roxo_escuro"
            android:text="@string/msg_retomarjornada"
            android:textColor="@color/roxo_claro" />

        <Button
            android:id="@+id/editarLeitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/roxo_escuro"
            android:text="@string/editar"
            android:textColor="@color/roxo_claro" />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/cancelar"
            android:textColor="@color/roxo_escuro"
            app:strokeColor="@color/roxo_escuro"
            app:strokeWidth="1sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>