<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PerfilActivity">

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/roxo_escuro"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <LinearLayout
        android:id="@+id/leitorLinearLayout"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/roxo_claro"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo2">

        <TextView
            android:id="@+id/nomeLeitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30sp"
            android:paddingHorizontal="10sp"
            android:paddingVertical="2sp"
            android:text="nomeLeitor"
            android:textColor="@color/roxo_escuro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailLeitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30sp"
            android:paddingHorizontal="10sp"
            android:paddingVertical="2sp"
            android:text="emailLeitor"
            android:textColor="@color/roxo_escuro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/editarLeitorBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/roxo_escuro"
            android:text="@string/editar"
            android:textColor="@color/roxo_claro" />

    </LinearLayout>

    <TextView
        android:id="@+id/dashboardTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/dashboard"
        android:textColor="@color/roxo_escuro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leitorLinearLayout" />

    <LinearLayout
        android:id="@+id/dashboard"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardTitulo">

        <TextView
            android:id="@+id/livrosLidos"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="5sp"
            android:background="@color/roxo_claro"
            android:padding="10sp"
            android:text="@string/livrosLidos"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paginasLidas"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="5sp"
            android:background="@color/roxo_claro"
            android:padding="10sp"
            android:text="@string/paginasLidas"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/generoLido"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="5sp"
            android:background="@color/roxo_claro"
            android:padding="10sp"
            android:text="@string/generoLido"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/acoesLinearLayout"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard">

        <Button
            android:id="@+id/LeiturasBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/roxo_escuro"
            android:text="@string/leituras" />

        <Button
            android:id="@+id/listaDesejosBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/roxo_escuro"
            android:text="@string/listaDeDesejos" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>