<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AdicionarLivroActivity">

    <TextView
        android:id="@+id/titulo4"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/roxo_escuro"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo4">

        <TextView
            android:id="@+id/tituloLivroCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloLivro"
            android:textColor="@color/roxo_escuro"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/tituloLivroAdicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:hint="Digite o titulo"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/generoCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:textColor="@color/roxo_escuro"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/generoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:hint="Digite o genero"
            android:inputType="text" />

        <TextView
            android:id="@+id/paginasCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paginas"
            android:textColor="@color/roxo_escuro"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/paginasInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:hint="Digite a quantidade de paginas"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botoesLinearLayout"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/cancelarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/cancelar"
            android:textColor="@color/roxo_escuro"
            app:strokeColor="@color/roxo_escuro"
            app:strokeWidth="1sp" />

        <Button
            android:id="@+id/cadastroLivroBtn"
            android:layout_width="370sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/roxo_escuro"
            android:text="@string/adicionar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>