<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ListaActivity">

    <Button
        android:id="@+id/adicionarBtn"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/roxo_escuro"
        android:text="@string/adicionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloApp" />

    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/roxo_escuro"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/listaTitulo"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/roxo_escuro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloApp" />

    <LinearLayout
        android:id="@+id/filtrosLinearLayout"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaTitulo">

        <LinearLayout
            android:id="@+id/generoLinearLayout"
            android:layout_width="260sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genero"
                android:textColor="@color/roxo_escuro"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notaLinearLayout"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nota"
                android:textColor="@color/roxo_escuro"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listLivros"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/roxo_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filtrosLinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>